--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,19 @@
 @font-face {
-  font-family: Kanji;
-  src: url(sources/KaneiwaAlpRegular-jEpG.ttf);
+  font-family: Ninja;
+  src: url(sources/Fonts/AssassinNinja.otf);
+}
+@font-face {
+  font-family: Shika;
+  src: url(sources/Fonts/Shikamaru.ttf);
 }
 body {
-  background-color: #555;
-  color: #ccc;
+  background-color: #0F0101;
+  color: #CCC5B9;
+  margin: 0px;
 }
 
 nav {
-  background-color: #2E0505;
+  background-color: #00141f;
   margin-top: auto;
   height: 90px;
   width: 100%;
@@ -35,6 +40,7 @@ nav div ul li {
   display: inline;
   text-decoration: none;
   margin-right: 40px;
+  font-family: Ninja;
 }
 nav div ul li:hover {
   cursor: pointer;
@@ -51,7 +57,7 @@ nav div div img {
   display: flex;
   flex-direction: column;
   margin: auto;
-  background-color: #222;
+  background-color: #CCC5B9;
 }
 
 #intro {
@@ -61,16 +67,20 @@ nav div div img {
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  background-color: #222;
 }
 #intro h1 {
   font-size: 10rem;
   line-height: 0.9;
   text-align: center;
   position: absolute;
+  font-family: Shika;
+  z-index: 2;
+  color: #F6AA1C;
 }
 #intro img {
-  opacity: 0.5;
-  z-index: -1;
+  opacity: 0.1;
+  z-index: 1;
   min-width: 100%;
   min-height: 100%;
 }
@@ -112,12 +122,13 @@ nav div div img {
 }
 
 #faqs {
-  height: 400px;
+  height: 500px;
 }
 
-/*BUILDING TOOLS*/
-.test {
-  border: 2px dashed greenyellow;
+/*BUILDING TOOLS
+.test{
+    border: 2px dashed greenyellow;
 }
+*/
 
 /*# sourceMappingURL=styles.css.map */
