--- a/styles.scss
+++ b/styles.scss
@@ -19,11 +19,11 @@ $c-main: #431717;
 
 //GENERAL
 body{
-    color: $c-gray;
     margin: 0px;
     font-family: Kanit;
     font-size: 2rem;
-    overflow-x: hidden;  
+    overflow-x: hidden;
+    min-width: 100%;
 }
 
 //NAV BAR
@@ -119,9 +119,7 @@ nav{
         padding-inline: 10%;
         padding-top: 5%;
         padding-bottom: 5%;
-        color: $c-gray;
         h1{
-            color: $c-main;
             font-family: Rock Salt;
             font-size: 5rem;
             margin-top: 0px;
@@ -131,45 +129,74 @@ nav{
 }
 .redtheme{
     background-color: $c-main;
-    color: $c-white !important;
+    color: $c-white;
+}
+.whitetheme{
+    color: $c-gray;
     h1{
-        color: $c-white !important;
+        color: $c-main; 
     }
 }
 
 #join{
-    height: 1000px;
-    .banner{
-        width: 100%;
-        height: 300px;
-        background-color: $c-darkred;
-        padding: 0px;
+    height: 600px;
+    div{
         display: flex;
         align-items: center;
         justify-content: center;
-            h1{
-                font-size: 5rem;
-                line-height: 0.9;
-                text-align: center;
-                position: absolute;
-                z-index: 2;
-                color: $c-white;
-                font-family: Stalinist One;
-            }
-            img{
-                opacity: 0.5;
-                z-index: 1;
-                width:80%;
-                height: 300px;
-                position: absolute;
-            }
+        width: 100%;
+        padding: 0px;
     }
-    /*
-    .buttons{
-
-    }*/
+    .banner{
+        height: 300px;
+        background-color: $c-darkred;
+        h1{
+            font-size: 5rem;
+            line-height: 0.9;
+            text-align: center;
+            position: absolute;
+            z-index: 2;
+            color: $c-white;
+            font-family: Stalinist One;
+        }
+        img{
+            opacity: 0.5;
+            z-index: 1;
+            width:77%;
+            height: 300px;
+            position: absolute;
+        }
+    }
 }
 
+.buttons{
+        height: 5rem;
+        width: 30rem;
+        a{
+            padding: 3px;
+            padding-inline: 30px;
+            text-decoration: none;
+            border-radius: 7px;
+            color: white;
+            border: 0px solid;
+            font-size: 1.5rem;
+            box-shadow: 0 0.2em $c-gray;
+            margin-top: 0px;
+            transition: 350ms;
+        }
+        a:hover{
+            box-shadow: 0 0 #6b6b6b;
+            margin-top: 0.5em;    
+        }
+} 
+.discbutton{
+    margin-right: 1rem;
+    background-color: #758aff;
+}
+.mebutton{
+    margin-left: 1rem;
+    background-color: #da43a5;
+}
 
 #info{
     height: 1200px;
@@ -209,10 +236,10 @@ nav{
 }
 
 #team{
-    height: 700px;
+    height: 40rem;
     div{
         width: 70%;
-        height: 500px;
+        height: 20rem;
     }
 }
 
@@ -224,6 +251,7 @@ nav{
 
 
 /*BUILDING TOOLS*/
+/*
 .test{
     border: 4px dashed rgb(6, 17, 124);
-}
+}*/
