--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 body {
   margin: 0px;
   font-family: Kanit;
-  font-size: 2rem;
+  font-size: 1.5rem;
   overflow-x: hidden;
   min-width: 100%;
 }
@@ -19,13 +19,13 @@ nav {
   margin-top: auto;
   height: 90px;
   width: 100%;
-  font-size: 27px;
+  font-size: 1.5rem;
   position: absolute;
   opacity: 1;
   position: fixed;
   z-index: 9;
 }
-nav img {
+nav a img {
   display: inline;
   height: 90px;
   margin-left: 15px;
@@ -36,9 +36,7 @@ nav div {
   margin-top: 26px;
 }
 nav div ul {
-  margin-left: 1000px;
   display: inline;
-  margin-right: 40px;
 }
 nav div ul li {
   display: inline;
@@ -55,19 +53,19 @@ nav div div {
   margin-top: auto;
 }
 nav div div img {
-  margin-right: 40px;
+  margin-right: 20px;
 }
 
 #twitter {
-  height: 37px;
+  height: 27px;
 }
 
 #discord {
-  height: 37px;
+  height: 27px;
 }
 
 #magiceden {
-  height: 40px;
+  height: 30px;
 }
 
 #hero {
@@ -138,11 +136,11 @@ nav div div img {
   padding: 0px;
 }
 #join .banner {
-  height: 300px;
+  height: 18rem;
   background-color: #310000;
 }
 #join .banner h1 {
-  font-size: 5rem;
+  font-size: 4.3rem;
   line-height: 0.9;
   text-align: center;
   position: absolute;
@@ -153,8 +151,8 @@ nav div div img {
 #join .banner img {
   opacity: 0.5;
   z-index: 1;
-  width: 77%;
-  height: 300px;
+  width: 80%;
+  height: 18rem;
   position: absolute;
 }
 
@@ -163,8 +161,8 @@ nav div div img {
   width: 30rem;
 }
 .buttons a {
-  padding: 3px;
-  padding-inline: 30px;
+  padding: 7px;
+  padding-inline: 50px;
   text-decoration: none;
   border-radius: 7px;
   color: white;
@@ -193,7 +191,7 @@ nav div div img {
   height: 1200px;
   width: 100%;
 }
-#info div {
+#info div div {
   margin-left: 10%;
   margin-top: 5%;
   height: 41rem;
@@ -202,19 +200,19 @@ nav div div img {
   padding-top: 0px;
   padding-bottom: 0px;
 }
-#info div img {
+#info div div img {
   display: inline;
   height: 40rem;
   border: 0.5rem double #ddd9d3;
 }
-#info div div {
+#info div div div {
   display: inline;
   width: 50rem;
   margin-left: 2rem;
   height: auto;
   float: right;
 }
-#info div div p {
+#info div div div p {
   color: #ddd9d3;
 }
 
