--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: Ninja;
   src: url(sources/Fonts/AssassinNinja.otf);
@@ -12,6 +13,7 @@ body {
   font-size: 1.5rem;
   overflow-x: hidden;
   min-width: 100%;
+  background-color: black;
 }
 
 nav {
@@ -99,18 +101,11 @@ nav div div img {
   display: flex;
   flex-direction: column;
   margin: auto;
-  background-color: #ddd9d3;
 }
 #content div {
-  padding-inline: 10%;
+  padding-inline: 5%;
   padding-top: 5%;
   padding-bottom: 5%;
-}
-#content div h1 {
-  font-family: Rock Salt;
-  font-size: 5rem;
-  margin-top: 0px;
-  margin-bottom: 0px;
 }
 
 .redtheme {
@@ -120,13 +115,27 @@ nav div div img {
 
 .whitetheme {
   color: #4D525B;
+  background-color: #ddd9d3;
 }
 .whitetheme h1 {
   color: #431717;
 }
 
+h1 {
+  font-family: Rock Salt;
+  font-size: 4rem;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+h2 {
+  font-family: Edu TAS Beginner;
+  font-size: 3rem;
+  margin-top: 10px;
+}
+
 #join {
-  height: 600px;
+  height: 23rem;
 }
 #join div {
   display: flex;
@@ -136,7 +145,7 @@ nav div div img {
   padding: 0px;
 }
 #join .banner {
-  height: 18rem;
+  height: 12rem;
   background-color: #310000;
 }
 #join .banner h1 {
@@ -151,8 +160,8 @@ nav div div img {
 #join .banner img {
   opacity: 0.5;
   z-index: 1;
-  width: 80%;
-  height: 18rem;
+  width: 89%;
+  height: 12rem;
   position: absolute;
 }
 
@@ -188,10 +197,10 @@ nav div div img {
 }
 
 #info {
-  height: 1200px;
+  height: 90rem;
   width: 100%;
 }
-#info div div {
+#info div {
   margin-left: 10%;
   margin-top: 5%;
   height: 41rem;
@@ -200,40 +209,106 @@ nav div div img {
   padding-top: 0px;
   padding-bottom: 0px;
 }
-#info div div img {
+#info div img {
   display: inline;
-  height: 40rem;
+  height: 27rem;
   border: 0.5rem double #ddd9d3;
 }
-#info div div div {
+#info div div {
   display: inline;
-  width: 50rem;
-  margin-left: 2rem;
+  width: 62rem;
+  margin-left: auto;
   height: auto;
   float: right;
+  margin-top: auto;
 }
-#info div div div p {
+#info div div p {
   color: #ddd9d3;
 }
 
 #roadmap {
-  height: 1080px;
+  height: 20rem;
 }
-#roadmap div {
-  width: 60%;
-  height: 600px;
+#roadmap h1 {
+  text-decoration: line-through;
 }
 
 #team {
   height: 40rem;
 }
-#team div {
+
+.teamcontainer {
   width: 70%;
-  height: 20rem;
+  height: 16rem;
+  background-color: #ddd9d3;
+  padding-bottom: 0%;
+  margin: auto;
+}
+.teamcontainer div {
+  margin-inline: 10px;
+  display: inline;
+  border: 3px solid black;
+  width: 30%;
+  height: 100px;
 }
 
 #faqs {
   height: 500px;
+  background-color: black;
+  color: white;
+  padding-inline: 20px !important;
+  padding-top: 20px !important;
+  padding-bottom: 10px !important;
+}
+#faqs div {
+  padding: 0px;
+}
+
+.faqstitle {
+  margin-left: 1rem;
+  font-size: 2.4rem;
+  margin-bottom: 20px;
+}
+
+.accordion {
+  background-color: rgb(2, 2, 2);
+  color: white;
+  cursor: pointer;
+  padding: 30px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 1.5rem;
+  transition: 0.4s;
+  border-bottom: 1px solid #ccc;
+}
+
+.active, .accordion:hover {
+  background-color: rgb(24, 24, 24);
+}
+
+.accordion:after {
+  content: "+";
+  color: white;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "−";
+}
+
+.panel {
+  padding: 0px 18px;
+  background-color: rgb(0, 0, 0);
+  max-height: 0px;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  margin-left: 25px;
+  font-size: 1.2rem;
+  font-weight: lighter;
 }
 
 /*BUILDING TOOLS*/
