--- a/styles.scss
+++ b/styles.scss
@@ -32,6 +32,7 @@ body{
     font-size: 1.5rem;
     overflow-x: hidden;
     min-width: 100%;
+    background-color: black;
 }
 
 
@@ -134,17 +135,10 @@ nav{
     display: flex;
     flex-direction: column;
     margin: auto;
-    background-color: $c-white;
     div{
-        padding-inline: 10%;
+        padding-inline: 5%;
         padding-top: 5%;
         padding-bottom: 5%;
-        h1{
-            font-family: Rock Salt;
-            font-size: 5rem;
-            margin-top: 0px;
-            margin-bottom: 0px;
-        }
     }
 }
 .redtheme{
@@ -153,16 +147,27 @@ nav{
 }
 .whitetheme{
     color: $c-gray;
+    background-color: $c-white;
     h1{
         color: $c-main; 
     }
 }
-
+h1{
+    font-family: Rock Salt;
+    font-size: 4rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+h2{
+    font-family: Edu TAS Beginner;
+    font-size: 3rem;
+    margin-top: 10px;
+}
 
 //JOIN SECTION
 
 #join{
-    height: 600px;
+    height: 23rem;
     div{
         display: flex;
         align-items: center;
@@ -171,7 +176,7 @@ nav{
         padding: 0px;
     }
     .banner{
-        height: 18rem;
+        height: 12rem;
         background-color: $c-darkred;
         h1{
             font-size: 4.3rem;
@@ -185,8 +190,8 @@ nav{
         img{
             opacity: 0.5;
             z-index: 1;
-            width:80%;
-            height: 18rem;
+            width:89%;
+            height: 12rem;
             position: absolute;
         }
     }
@@ -225,45 +230,45 @@ nav{
 //INFO SECTION
 
 #info{
-    height: 1200px;
+    height: 90rem;
     width: 100%;
     div{
+        margin-left: 10%;
+        margin-top: 5%;
+        height: 41rem;
+        width: 95rem;
+        padding-inline: 0px;
+        padding-top: 0px;
+        padding-bottom: 0px;
+        img{
+            display: inline;
+            height: 27rem;
+            border: 0.5rem double $c-white;
+        }
         div{
-            margin-left: 10%;
-            margin-top: 5%;
-            height: 41rem;
-            width: 95rem;
-            padding-inline: 0px;
-            padding-top: 0px;
-            padding-bottom: 0px;
-            img{
-                display: inline;
-                height: 40rem;
-                border: 0.5rem double $c-white;
-            }
-            div{
-                display: inline;
-                width: 50rem;
-                margin-left: 2rem;
-                height: auto;
-                float: right;
-                p{
+            display: inline;
+            width: 62rem;
+            margin-left: auto;
+            height: auto;
+            float: right;
+            margin-top: auto;
+            p{
                     color: $c-white;
-                }
             }
         }
     }
 }
 
 
+
 //ROADMAP SECTION
 
 #roadmap{
-    height: 1080px;
-    div{
-        width: 60%;
-        height: 600px;
+    height: 20rem;
+    h1{
+        text-decoration: line-through;
     }
+    
 }
 
 
@@ -271,20 +276,80 @@ nav{
 
 #team{
     height: 40rem;
+}
+.teamcontainer{
+    width: 70%;
+    height: 16rem;
+    background-color: $c-white;
+    padding-bottom: 0%;
+    margin: auto;
     div{
-        width: 70%;
-        height: 20rem;
+        margin-inline: 10px;
+        display: inline;
+        border: 3px solid black;
+        width: 30%;
+        height: 100px;
     }
 }
-
 
 //FAQS SECTION
 
 #faqs{
     height: 500px;
+    background-color: black;
+    color: white;
+    padding-inline: 20px !important;
+    padding-top: 20px !important;
+    padding-bottom: 10px !important;
+    div{
+        padding: 0px;
+    }
 }
-
-
+.faqstitle{
+    margin-left: 1rem;
+    font-size: 2.4rem;
+    margin-bottom: 20px;
+}
+.accordion {
+    background-color: rgb(2, 2, 2);
+    color: white;
+    cursor: pointer;
+    padding: 30px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 1.5rem;
+    transition: 0.4s;
+    border-bottom: 1px solid #ccc;
+  }
+  
+  .active, .accordion:hover {
+    background-color: rgb(24, 24, 24);
+  }
+  
+  .accordion:after {
+    content: '\002B';
+    color: white;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+  }
+  
+  .active:after {
+    content: "\2212";
+  }
+  
+  .panel {
+    padding: 0px 18px;
+    background-color: rgb(0, 0, 0);
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    margin-left: 25px;
+    font-size: 1.2rem;
+    font-weight: lighter;
+  }
 
 
 /*BUILDING TOOLS*/
