--- a/styles.css
+++ b/styles.css
@@ -11,18 +11,21 @@ body {
   margin: 0px;
   font-family: Kanit;
   font-size: 1.5rem;
-  overflow-x: hidden;
-  min-width: 100%;
+  width: 100vw;
   background-color: black;
+  overflow-x: hidden;
+}
+
+#main {
+  overflow-x: hidden;
 }
 
 nav {
   background-color: #ddd9d3;
   margin-top: auto;
   height: 90px;
-  width: 100%;
+  width: 100vw;
   font-size: 1.5rem;
-  position: absolute;
   opacity: 1;
   position: fixed;
   z-index: 9;
@@ -41,38 +44,69 @@ nav div ul {
   display: inline;
 }
 nav div ul li {
-  display: inline;
+  display: inline-block;
+  position: relative;
   margin-right: 40px;
   text-decoration: none;
   color: #431717;
   font-family: Shika;
 }
+nav div ul li:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #431717;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
 nav div ul li:hover {
   cursor: pointer;
+}
+nav div ul li:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
 nav div div {
   display: inline;
   margin-top: auto;
 }
-nav div div img {
+nav div div a {
+  position: relative;
+  overflow: hidden;
+}
+nav div div a img {
   margin-right: 20px;
 }
 
-#twitter {
+.xyztype {
+  position: absolute;
+  z-index: 1000;
+  transition: 300ms;
+}
+
+.xyztype:hover {
+  opacity: 0;
+}
+
+.twitter {
   height: 27px;
 }
 
-#discord {
+.discord {
   height: 27px;
 }
 
-#magiceden {
-  height: 30px;
+.magiceden {
+  height: 27px;
 }
 
 #hero {
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -80,7 +114,7 @@ nav div div img {
   background-color: #310000;
 }
 #hero h1 {
-  font-size: 10rem;
+  font-size: 10vw;
   line-height: 0.9;
   text-align: center;
   position: absolute;
@@ -91,15 +125,13 @@ nav div div img {
 #hero img {
   opacity: 0.1;
   z-index: 1;
-  min-width: 100%;
-  height: 100vh;
+  width: 100vw;
+  height: 99vh;
   position: absolute;
 }
 
 #content {
   width: 100%;
-  display: flex;
-  flex-direction: column;
   margin: auto;
 }
 #content div {
@@ -132,6 +164,19 @@ h2 {
   font-family: Edu TAS Beginner;
   font-size: 3rem;
   margin-top: 10px;
+}
+
+footer {
+  visibility: hidden;
+  background-color: #4D525B;
+  display: flex;
+  align-items: center;
+  height: 10vh;
+  width: 100vw;
+}
+footer a {
+  display: inline;
+  margin-inline: 12.5vw;
 }
 
 .buttons {
@@ -170,9 +215,10 @@ h2 {
 #join .banner {
   height: 12rem;
   background-color: #310000;
+  overflow: hidden;
 }
 #join .banner h1 {
-  font-size: 4.3rem;
+  font-size: 4vw;
   line-height: 0.9;
   text-align: center;
   position: absolute;
@@ -256,7 +302,7 @@ h2 {
 
 .teamcontainer {
   display: flex;
-  width: 73rem;
+  width: 60vw;
   height: 24rem;
   background-color: #ddd9d3;
   padding-top: 1% !important;
@@ -266,9 +312,9 @@ h2 {
   border-radius: 9px;
 }
 .teamcontainer div {
-  margin-inline: 1.5rem;
+  margin-inline: 1.5vw;
   display: inline;
-  width: 14rem;
+  width: rem;
   height: auto;
   padding-top: 0px !important;
   text-align: center;
@@ -350,10 +396,80 @@ h2 {
   font-weight: lighter;
 }
 
+@media (max-width: 1400px) {
+  html {
+    font-size: 25px;
+  }
+  header {
+    visibility: hidden;
+  }
+  h1 {
+    font-size: 7vw;
+  }
+  h2 {
+    font-size: 5vw;
+  }
+  #join {
+    height: auto;
+  }
+  #info {
+    height: auto;
+  }
+  #info div {
+    width: 80vw;
+    height: auto;
+    margin-inline: 0px;
+  }
+  #info div img {
+    display: block;
+    width: 80vw;
+  }
+  #info div div {
+    display: block;
+    margin-inline: 0px;
+    width: 80vw;
+    float: left;
+  }
+  #info div .buttons {
+    visibility: hidden;
+  }
+  footer {
+    visibility: visible;
+  }
+  #roadmap {
+    height: 45vh;
+  }
+  #team {
+    height: auto;
+  }
+  .teamcontainer {
+    width: 60vw;
+    flex-direction: column;
+    height: auto;
+  }
+  #faqs {
+    height: auto;
+  }
+}
+footer {
+  visibility: show;
+}
+
+@media (max-width: 768px) {
+  html {
+    font-size: 18px;
+  }
+}
+@media (max-width: 450px) {
+  html {
+    font-size: 12px;
+  }
+}
 /*BUILDING TOOLS*/
 /*
 .test{
     border: 4px dashed rgb(6, 17, 124);
-}*/
+}
+*/
 
 /*# sourceMappingURL=styles.css.map */
