--- a/styles.scss
+++ b/styles.scss
@@ -442,9 +442,10 @@ footer{
 
 // Pantallas grandes
 
-@media (max-width: 1400px) {
+
+  @media (max-width: 1100px) {
     html {
-        font-size: 25px;
+        font-size: 18px;
     }
     header{
         visibility: hidden;
@@ -467,6 +468,7 @@ footer{
             img{
                 display: block;
                 width: 80vw;
+                height: 80vw;
             }
             div{
                 display: block;
@@ -478,9 +480,6 @@ footer{
                 visibility: hidden;
             }
         }
-    }
-    footer{
-        visibility: visible;
     }
     #roadmap{
         height: 45vh;
@@ -496,18 +495,10 @@ footer{
     #faqs{
         height: auto;
     }
-  }
-  footer{
-    visibility: show;
-  }
-  
-  // Tabletas 
-  
-  @media (max-width: 768px) {
-    html {
-        font-size: 18px;
+    footer{
+        visibility: show;
     }
-  }
+}
   
   // Celulares 
   
